@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 17,
+  "count": 15,
+  "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2024-09-22T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-09-23T00:00:00Z",
       "count": 3,
@@ -41,6 +36,11 @@
       "timestamp": "2024-10-02T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-10-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
