@@ -1,3 +1,12 @@
+2024-10-06T12:30:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11201856402 # 571
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-06
+* notice: last 14d: unq all: 14 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 2237 4487 / 2254 4504
+* notice: next accum: outdated-unq outdated-all / unq all: 2240 4490 / 2255 4505
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-09-22] / [2024-10-06]
+
 2024-10-05T01:16:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11189181318 # 568
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-05
